# sniff-mcp

./: .gitignore  ARCHITECTURE.md  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: release.yml
docker/: entrypoint.sh
npm/: README.md  index.js  package.json
sniff_mcp/: __main__.py  build_embeddings.py  build_search_index.py  build_store.py  disease.py  fetch_release.py  query.py  rest.py  server.py
