[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sniff-mcp"
version = "0.0.1"
description = "Sniff MCP — agent-callable canine genomics over the Sniff Atlas (breed-stratified variant frequencies + calibrated AI pathogenicity + knowledge graph). Name-reservation placeholder; full server coming soon."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Matt Gehring", email = "matt@sniff.world" }]
keywords = ["mcp", "model-context-protocol", "canine", "dog", "genomics", "variant", "allele-frequency", "pathogenicity", "sniff", "gnomad"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3"]
dependencies = ["fastmcp>=3.4", "duckdb>=1.5", "pyarrow>=14", "numpy>=1.24"]

[project.urls]
Homepage = "https://sniff.world"
Dataset = "https://doi.org/10.5281/zenodo.20566358"
Repository = "https://github.com/Sniffscore/sniff-mcp"

[project.scripts]
sniff-mcp = "sniff_mcp.__main__:main"
