[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sniff-mcp"
version = "0.1.3"
description = "Agent-callable canine genomics — open MCP server + REST API over the Sniff Atlas: breed-stratified allele frequencies for 9.67M variants across 188 dog breeds, calibrated AI pathogenicity, and a variant/gene/breed/disease knowledge graph."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Matt Gehring", email = "matt@sniff.world" }]
keywords = ["mcp", "model-context-protocol", "canine", "dog", "genomics", "variant", "allele-frequency", "pathogenicity", "sniff", "gnomad"]
classifiers = ["Development Status :: 4 - Beta", "Intended Audience :: Science/Research", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Topic :: Scientific/Engineering :: Bio-Informatics"]
dependencies = ["fastmcp>=3.4", "duckdb>=1.5", "pyarrow>=14", "pandas>=2.0", "numpy>=1.24", "fastapi>=0.110", "uvicorn>=0.30", "fastembed>=0.4"]

[project.urls]
Homepage = "https://sniff.world"
Dataset = "https://doi.org/10.5281/zenodo.20566358"
Repository = "https://github.com/Sniffscore/sniff-mcp"

[project.scripts]
sniff-mcp = "sniff_mcp.__main__:main"
